用户前台搭建完毕（/o2o/frontend/index进入） 1.主要查看首页店铺一级类别 2.点击一级类别查看属于该一级类别的店铺列表（分页采用SUI-MOBILE的无限滚动进行分页） 3.用户可通过店铺二级类别button、店铺名、区域进行搜索店铺 4.点击店铺可进入店铺详情页（详情页有店铺基本信息、店铺商品类别、店铺商品类别，同样用户可通过商品类别button和商品名检索该店铺商品） 5.点击店铺商品，进入商品详情页（展示商品描述、商品缩略图和详情图）

--- a/src/main/webapp/WEB-INF/html/shop/productoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/productoperation.html
@@ -27,7 +27,7 @@
                 <span class="icon icon-left"></span>
                 返回
             </a>
-            <h1 class="title">商店信息</h1>
+            <h1 class="title">商品信息</h1>
         </header>
         <div class="content">
             <div class="list-block">
@@ -38,7 +38,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">商品名称</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="商铺名称" id="product-name"/>
+                                    <input type="text" placeholder="商品信息" id="product-name"/>
                                 </div>
                             </div>
                         </div>
