微信授权登陆模块完成： 1.用户通过点击https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx6d9e79f7e8844954&redirect_uri=http://81.70.249.115/o2o/wechatlogin/logincheck&role_type=1&response_type=code&scope=snsapi_userinfo&state=2#wechat_redirect 可以进行登陆o2o系统，如果用户未注册过，则将注册该用户，添加用户信息 2.state值控制用户是店家还是普通客户，决定导向是店家页面还是前台展示页面

--- a/src/main/webapp/WEB-INF/html/frontend/index.html
+++ b/src/main/webapp/WEB-INF/html/frontend/index.html
@@ -23,7 +23,7 @@
 
     <!-- 工具栏 -->
     <nav class="bar bar-tab">
-        <a class="tab-item external active" href="/o2o/frontend/index">
+        <a class="tab-item external active" href="../frontend/index">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
@@ -45,7 +45,7 @@
             <div class="swiper-pagination"></div>
         </div>
         <div class='total-shop-button'>
-            <a href="/o2o/frontend/listshopspage" external>全部商店</a>
+            <a href="../frontend/listshopspage" external>全部商店</a>
         </div>
         <div class="list-block media-list row">
             <!--<li>
