--- a/src/main/webapp/WEB-INF/html/frontend/listshops.html
+++ b/src/main/webapp/WEB-INF/html/frontend/listshops.html
@@ -18,7 +18,7 @@
     <!-- 标题栏 -->
     <header class="bar bar-nav">
         <a class="button button-link button-nav" external
-           href="#" data-transition='slide-out' onclick="goBack(this)"> <span
+           href="../frontend/index" data-transition='slide-out'> <span
                 class="icon icon-left"></span> 返回
         </a>
         <h1 class="title">店铺列表</h1>
@@ -26,7 +26,7 @@
 
     <!-- 工具栏 -->
     <nav class="bar bar-tab">
-        <a class="tab-item external active" href="/o2o/frontend/index">
+        <a class="tab-item external active" href="../frontend/index">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
