--- a/src/main/webapp/WEB-INF/html/frontend/productdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/productdetail.html
@@ -25,7 +25,7 @@
 
     <!-- 工具栏 -->
     <nav class="bar bar-tab">
-        <a class="tab-item external active" href="/o2o/frontend/index">
+        <a class="tab-item external active" href="../frontend/index">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
@@ -50,8 +50,6 @@
             </div>
         </div>
         <div class="img-list">
-            <img alt="图片内容" src="../upload/item/shop/83/37/detail/2021020613011828753.jpg"/>
-            <img alt="图片内容2" src="../upload/item/shop/83/35/detail/2021020612580625389.jpg"/>
         </div>
     </div>
 </div>
