--- a/src/main/webapp/WEB-INF/html/frontend/shopdetailpage.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shopdetailpage.html
@@ -26,7 +26,7 @@
 
     <!-- 工具栏 -->
     <nav class="bar bar-tab">
-        <a class="tab-item external active" href="/o2o/frontend/index">
+        <a class="tab-item external active" href="../frontend/index">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
@@ -42,8 +42,7 @@
         <div class="card demo-card-header-pic">
             <div valign="bottom" class="card-header color-white no-border no-padding">
                 <img class='card-cover'
-                     src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg"
-                     alt="#">
+                     src="#" alt="#">
             </div>
             <div class="card-content">
                 <div class="card-content-inner">
