1.用户平台账号绑定  * 用户通过微信授权登录后，可以设置用户密码绑定平台账号，其中密码采用MD5加密方法加密后入库  * 用户修改密码、登陆验证前后端开发 2. 配置redis缓存，主要针对读频繁很少写的内容：shopCategory（店铺类别）、headLine（头条）、area（区域信息）  * spring-redis.xml、JedisPoolWriper、JedisUtil、CacheService（注释原因在于服务器内存太小，所以将redis配置注释了，在本地放开注释可以运行） 3. 建立购买商品得积分表、积分商品等实体类和表  * Award（积分商品实体类）、UserAwardMap（用户消费积分记录实体类）、UserProductMap（用户购买商品记录实体类）、UserShopMap（用户-店铺总积分实体类）、ProductSellDaily（商家日统计商品购买记录实体类）、ShopAuthMap（店员权限控制实体类，可控制店员是否有扫码兑换商品权利） 4. interceptors拦截类  * 控制用户在商家后台shopadmin登陆的拦截类LoginInterceptor  * 控制商家修改店铺以及商品权限的拦截类ShopPermissionInterceptor（主要针对商家只能对可操作的店铺shoplist进行增删改查，例如商家想通过getshopbyid查询其他店铺不可行）

--- a/src/main/webapp/WEB-INF/html/shop/productoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/productoperation.html
@@ -90,7 +90,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">积分</div>
                                 <div class="item-input">
-                                    <input type="number" id="integral" placeholder="可选"/>
+                                    <input type="number" id="point" placeholder="可选"/>
                                 </div>
                             </div>
                         </div>
