--- a/src/main/webapp/WEB-INF/html/frontend/index.html
+++ b/src/main/webapp/WEB-INF/html/frontend/index.html
@@ -68,9 +68,10 @@
 <!-- Left Panel with Reveal effect -->
 <div class="panel panel-right panel-reveal" id="panel-js-demo">
     <div class="content-block">
-        <p>这是一个侧栏</p>
-        <p></p>
+        <p><a href="/o2o/local/accountbind?userType=1" class="close-panel">绑定账号</a></p>
+        <p><a href="/o2o/local/changepswpage?userType=1" class="close-panel">修改密码</a></p>
         <!-- Click on link with "close-panel" class will close panel -->
+        <p><a href="#" id="logout" data-usertype="1" class="close-panel">退出登录</a></p>
         <p><a href="#" class="close-panel">关闭</a></p>
     </div>
 </div>
@@ -79,5 +80,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/frontend/index.js' charset='utf-8'></script>
+<script type="text/javascript" src="../resources/js/local/logout.js" charset="utf-8"></script>
 </body>
 </html>
