--- a/src/main/webapp/WEB-INF/html/frontend/productdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/productdetail.html
@@ -42,7 +42,7 @@
             <div class="card-content">
                 <div class="card-content-inner">
                     <p class="lastEditTime-bonus"><span class="lastEditTime">
-                        发表于 2015/01/15</span><span class="bonus">购买可得多少积分</span></p>
+                        发表于 2015/01/15</span><span class="bonus"></span></p>
                     <p class="product-sale"><span class="normal-price"><s>正常价格</s></span><span class="promotion-price">促销价格</span>
                     </p>
                     <p class="product-desc">商品描述</p>
@@ -59,9 +59,10 @@
 <!-- Left Panel with Reveal effect -->
 <div class="panel panel-right panel-reveal" id="panel-js-demo">
     <div class="content-block">
-        <p>这是一个侧栏</p>
-        <p></p>
+        <p><a href="/o2o/local/accountbind?userType=1">绑定账号</a></p>
+        <p><a href="/o2o/local/changepswpage?userType=1">修改密码</a></p>
         <!-- Click on link with "close-panel" class will close panel -->
+        <p><a href="#" id="logout" data-usertype="1">退出登录</a></p>
         <p><a href="#" class="close-panel">关闭</a></p>
     </div>
 </div>
@@ -70,6 +71,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/frontend/productdetail.js' charset='utf-8'></script>
-
+<script type="text/javascript" src="../resources/js/local/logout.js" charset="utf-8"></script>
 </body>
 </html>
