--- a/src/main/webapp/WEB-INF/html/frontend/shopdetailpage.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shopdetailpage.html
@@ -108,9 +108,10 @@
 <!-- Left Panel with Reveal effect -->
 <div class="panel panel-left panel-reveal">
     <div class="content-block">
-        <p>这是一个侧栏</p>
-        <p></p>
+        <p><a href="/o2o/local/accountbind?userType=1">绑定账号</a></p>
+        <p><a href="/o2o/local/changepswpage?userType=1">修改密码</a></p>
         <!-- Click on link with "close-panel" class will close panel -->
+        <p><a href="#" id="logout" data-usertype="1">退出登录</a></p>
         <p><a href="#" class="close-panel">关闭</a></p>
     </div>
 </div>
@@ -119,5 +120,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/frontend/shopdetailpage.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
+<script type="text/javascript" src="../resources/js/local/logout.js" charset="utf-8"></script>
 </body>
 </html>
