--- a/src/main/webapp/WEB-INF/html/shop/productlist.html
+++ b/src/main/webapp/WEB-INF/html/shop/productlist.html
@@ -20,7 +20,7 @@
     <div class="content-block">
         <div class="row row-product">
             <div class="col-40">商品名称</div>
-            <div class="col-40">优先级</div>
+            <div class="col-40">积分</div>
             <div class="col-20">操作</div>
         </div>
         <div class="product-wrap">
