--- a/src/main/webapp/WEB-INF/html/shop/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/shop/shoplist.html
@@ -32,12 +32,16 @@
     </div>
     <div class="content-block">
         <div class="row">
-            <div class="col-50">
-                <a href="" id="log-out"
+            <div class="col-33">
+                <a href="/o2o/local/accountbind?userType=2" id="accountbind"
+                   class="button button-big button-fill button-danger">账号绑定</a>
+            </div>
+            <div class="col-33">
+                <a href="" id="logout" data-usertype="2"
                    class="button button-big button-fill button-danger">退出系统</a>
             </div>
-            <div class="col-50">
-                <a href="/myo2o/shop/changepsw" class="button button-big button-fill button-success">修改密码</a>
+            <div class="col-33">
+                <a href="/o2o/local/changepswpage" class="button button-big button-fill button-success">修改密码</a>
             </div>
         </div>
     </div>
@@ -48,5 +52,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/shop/shoplist.js' charset='utf-8'></script>
+<script type="text/javascript" src="../resources/js/local/logout.js" charset="utf-8"></script>
 </body>
 </html>
